--- a/Responsive Web Design/Survey Form/styles.css
+++ b/Responsive Web Design/Survey Form/styles.css
@@ -1,3 +1,52 @@
-h1 {
-    font-size: 200px;
+input, select {
+    display: block;
 }
+
+body {
+    background-color: grey;
+    font-family: Tahoma;
+}
+div[id="header"] {
+    text-align: center;
+}
+
+.menu {
+    width: 80%;
+    background-color: rgba(138, 101, 187, 1);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    max-width: 500px;
+  }
+
+  .label {
+    display: inline-block;
+    text-align: right;
+  }
+
+.button {
+    display: inline-block;
+    text-align: left;
+}
+fieldset {
+    border: none;
+  }
+.inline {
+    width: unset;
+    margin: 0 0.5em 0 0;
+    vertical-align: middle;
+  }
+  .block {
+    display: block;
+  }
+  button {
+    display: block;
+    width: 60%;
+    margin: 1em auto;
+    height: 2em;
+    font-size: 1.1rem;
+    background-color: #3b3b4f;
+    border-color: white;
+    min-width: 300px;
+    color: white;
+  }
